# loli.kak

./: .kakrc  Cargo.toml  README.md
rc/: debug.kak  grep.kak  lgrep.kak  location-list.kak  loli.kak  test.kak  userfacing.kak
src/: context.rs  location_list.rs  main.rs  types.rs  util.rs
