[package]
name = "kak-loli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
itertools = "0.10.1"
log = "0.4.14"
once_cell = "1.8.0"
regex = "1.5.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
simplelog = "0.10.1"
structopt = "0.3.23"
thiserror = "1.0.29"
